manifest/application/other/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: front
  # annotations:   # ← 이 블록 자체를 제거
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: frontend.cccr4.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

    - host: frontend.cccr4opensource.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
